# DuskX

./: .gitignore  CMakeLists.txt
CMake/: FindGSL.cmake  Module.cmake
Demo/: CMakeLists.txt
Demo/Private/: Main.cpp
Engine/: CMakeLists.txt
Engine/Core/: CMakeLists.txt
Engine/Core/Private/: App.cpp  WindowManager.cpp
Engine/Core/Public/: App.hpp  Core.hpp  Math.hpp  Window.hpp  WindowManager.hpp
Engine/Desktop/: CMakeLists.txt
Engine/Desktop/Private/: SDL2WindowManager.cpp
Engine/Desktop/Public/: Desktop.hpp  SDL2WindowManager.hpp
Engine/DirectX/: CMakeLists.txt
Engine/DirectX/Private/: DirectX.cpp  GetDXVer.cpp
Engine/DirectX/Public/: DirectX.hpp  d3dx12.h
Engine/GLFW/: CMakeLists.txt
Engine/GLFW/Private/: GLFWWindowManager.cpp
Engine/GLFW/Public/: GLFWWindowManager.hpp
Engine/OpenGL/: CMakeLists.txt
Engine/OpenGL/Private/: OpenGL.cpp  gl.c
Engine/OpenGL/Public/: OpenGL.hpp
Engine/OpenGL/Public/glad/: gl.h
Engine/SDL2/: CMakeLists.txt
Engine/SDL2/Private/: SDL2WindowManager.cpp
Engine/SDL2/Public/: SDL2WindowManager.hpp
Engine/Util/: CMakeLists.txt
Engine/Util/Private/: FileUtil.cpp  StringUtil.cpp
Engine/Util/Public/: FileUtil.hpp  Platform.hpp  StringUtil.hpp  Util.hpp
Engine/Util/Test/: FileUtilTest.cpp  StringUtilTest.cpp
Engine/Vulkan/: CMakeLists.txt
Engine/Vulkan/Private/: Vulkan.cpp  vulkan.c
Engine/Vulkan/Public/: Vulkan.hpp
Engine/Vulkan/Public/glad/: vulkan.h
Engine/Win32/: CMakeLists.txt
Engine/Win32/Private/: Win32WindowManager.cpp
Engine/Win32/Public/: Win32WindowManager.hpp
Tools/: CMakeLists.txt
Tools/PreCommit/: CMakeLists.txt  pre-commit.in
Tools/PreCommit/Private/: Main.cpp
