
ADD_SUBDIRECTORY(Util)
ADD_SUBDIRECTORY(Core)

IF(DUSK_GRAPHICS_OPENGL)
    ADD_SUBDIRECTORY(OpenGL)
ELSEIF(DUSK_GRAPHICS_VULKAN)
    ADD_SUBDIRECTORY(Vulkan)
ELSEIF(DUSK_GRAPHICS_DIRECTX)
    ADD_SUBDIRECTORY(DirectX)
ENDIF()

IF(DUSK_WINDOW_SDL2)
    ADD_SUBDIRECTORY(SDL2)
ELSEIF(DUSK_WINDOW_GLFW)
    ADD_SUBDIRECTORY(GLFW)
ELSEIF(DUSK_WINDOW_WIN32)
    ADD_SUBDIRECTORY(Win32)
ELSEIF(DUSK_WINDOW_ANDROID)
    #ADD_SUBDIRECTORY(Android)
ENDIF()
