
SET(_TARGET DuskOpenGL)

DuskModule(${_TARGET})

TARGET_LINK_LIBRARIES(
    ${_TARGET}
    PUBLIC
        DuskCore
        OpenGL::GL
)

TARGET_LINK_LIBRARIES(
    DuskCore
    PUBLIC
        ${_TARGET}
)

STRING(REPLACE "." ";" _VERSION_LIST ${OPENGL_VERSION})
LIST(GET _VERSION_LIST 0 _OPENGL_VERSION_MAJOR)
LIST(GET _VERSION_LIST 1 _OPENGL_VERSION_MINOR)

TARGET_COMPILE_DEFINITIONS(
    ${_TARGET}
    PUBLIC
        -DDUSK_OPENGL_VERSION_MAJOR=${_OPENGL_VERSION_MAJOR}
        -DDUSK_OPENGL_VERSION_MINOR=${_OPENGL_VERSION_MINOR}
        -DDUSK_GRAPHICS_OPENGL
)